Changed page title form blog to Daily Blog

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Blog</title>
+        <title>Daily Blog</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
@@ -47,7 +47,7 @@
                 <p>Rump salami prosciutto ball tip, spare ribs brisket shoulder frankfurter flank andouille pork loin tenderloin turducken. Beef ribs pancetta shankle, pork chop filet mignon corned beef sausage doner strip steak ground round. Chuck tenderloin shoulder venison corned beef flank. Pastrami sausage turducken, t-bone sirloin ground round turkey leberkas brisket swine. Frankfurter andouille ball tip filet mignon swine.</p>
             
                 <hr>
-                
+
             </div>
 
     </body>
